# typed-soup

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: test_typed_soup.py
typings/scrapy/: crawler.pyi
typings/scrapy/http/: headers.pyi
typings/scrapy/selector/: unified.pyi
typings/scrapy/settings/: __init__.pyi  default_settings.pyi
typings/scrapy/spiders/: __init__.pyi  sitemap.pyi
typings/scrapy/utils/: _compression.pyi  datatypes.pyi  gz.pyi  log.pyi  ossignal.pyi  response.pyi
